--- a/test/CoreUtils/CMakeLists.txt
+++ b/test/CoreUtils/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Testing
 #
 # ======================================================================
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
 cet_test( printBacktrace_test
   LIBRARIES
     larcorealg_CoreUtils
