--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 
 cmake_minimum_required (VERSION 3.19  FATAL_ERROR)
 
-project(larcorealg 09.01.01 LANGUAGES CXX)
+project(larcorealg VERSION 09.01.01 LANGUAGES CXX)
 
 find_package(cetmodules REQUIRED)
 find_package(canvas_root_io)
