--- a/test/Geometry/CMakeLists.txt
+++ b/test/Geometry/CMakeLists.txt
@@ -19,7 +19,7 @@ cet_make_library( LIBRARY_NAME GeometryTestLib
                   LIBRARIES larcorealg_Geometry
                         larcorealg_TestUtils
                         canvas
-                        messagefacility::mf_messagelogger
+                        messagefacility::headers
                         fhiclcpp::fhiclcpp fhiclcpp::types
                         cetlib cetlib_except
                         Boost::unit_test_framework
@@ -34,7 +34,7 @@ cet_test(geometry_iterator_test
   SOURCES geometry_iterator_test.cxx
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
@@ -48,7 +48,7 @@ cet_test(geometry_geoid_test
   SOURCES geometry_geoid_test.cxx
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
@@ -63,7 +63,7 @@ cet_test(geometry_test
   TEST_ARGS ./test_geometry.fcl
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
 )
@@ -75,7 +75,7 @@ cet_test(geometry_loader_test
   TEST_ARGS ./test_geometry.fcl
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
 )
@@ -87,7 +87,7 @@ cet_test(geometry_iterator_loop_test
   TEST_ARGS ./test_geometry_iterator_loop.fcl
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
 )
@@ -98,7 +98,7 @@ cet_test(geometry_standardchannelmapping_test
   SOURCES geometry_standardchannelmapping_test.cxx
   LIBRARIES larcorealg_Geometry
             GeometryTestLib
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
@@ -112,7 +112,7 @@ cet_test(geometry_standardchannelmapping_test
 cet_test(geometry_thirdplaneslope_test
   SOURCES geometry_thirdplaneslope_test.cxx
   LIBRARIES larcorealg_Geometry
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
@@ -142,7 +142,7 @@ cet_test(driftvolumes_test
   DATAFILES test_geometry.fcl
   TEST_ARGS ./test_geometry.fcl
   LIBRARIES larcorealg_Geometry
-            messagefacility::mf_messagelogger
+            messagefacility::headers
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
