--- a/test/Geometry/CMakeLists.txt
+++ b/test/Geometry/CMakeLists.txt
@@ -19,130 +19,7 @@ cet_make_library( LIBRARY_NAME GeometryTestLib
                   LIBRARIES larcorealg_Geometry
                         larcorealg_TestUtils
                         canvas
-                        messagefacility::headers
-                        fhiclcpp::fhiclcpp fhiclcpp::types
-                        cetlib cetlib_except
-                        Boost::unit_test_framework
-          )
-
-
-# geometry test on "standard" geometry
-
-# unit test (use geometry configuration from config file, the rest is ignored)
-# this uses BOOST for the test
-cet_test(geometry_iterator_test
-  SOURCES geometry_iterator_test.cxx
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-  USE_BOOST_UNIT
-  DATAFILES test_geometry.fcl
-  TEST_ARGS -- ./test_geometry.fcl
-)
-
-# unit test (use geometry configuration from config file, the rest is ignored)
-# this uses BOOST for the test
-cet_test(geometry_geoid_test
-  SOURCES geometry_geoid_test.cxx
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-  USE_BOOST_UNIT
-  DATAFILES test_geometry.fcl
-  TEST_ARGS -- ./test_geometry.fcl
-)
-
-# unit test (use the hard-coded channel mapping for "standard" LArTPCdetector)
-cet_test(geometry_test
-  SOURCES geometry_test.cxx
-  DATAFILES test_geometry.fcl
-  TEST_ARGS ./test_geometry.fcl
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-)
-
-# test of standalone geometry loading (use the hard-coded channel mapping for "standard" LArTPCdetector)
-cet_test(geometry_loader_test
-  SOURCES geometry_loader_test.cxx
-  DATAFILES test_geometry.fcl
-  TEST_ARGS ./test_geometry.fcl
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-)
-
-# test to verify loops on geometry elements by geometry iterators (hard-coded channel mapping for "standard" LArTPCdetector)
-cet_test(geometry_iterator_loop_test
-  SOURCES geometry_iterator_loop_test.cxx
-  DATAFILES test_geometry_iterator_loop.fcl
-  TEST_ARGS ./test_geometry_iterator_loop.fcl
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-)
-
-
-# test for standard channel mapping (BOOST unit test)
-cet_test(geometry_standardchannelmapping_test
-  SOURCES geometry_standardchannelmapping_test.cxx
-  LIBRARIES larcorealg_Geometry
-            GeometryTestLib
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-  USE_BOOST_UNIT
-  DATAFILES test_geometry.fcl
-  TEST_ARGS ./test_geometry.fcl
-)
-
-
-# simple unit test
-# this uses BOOST for the test
-cet_test(geometry_thirdplaneslope_test
-  SOURCES geometry_thirdplaneslope_test.cxx
-  LIBRARIES larcorealg_Geometry
-            messagefacility::headers
-            fhiclcpp::fhiclcpp fhiclcpp::types
-            cetlib cetlib_except
-  USE_BOOST_UNIT
-  DATAFILES test_geometry.fcl
-  TEST_ARGS -- ./test_geometry.fcl
-)
-
-
-# decomposition engine tests
-cet_test(Decomposer_test
-  SOURCES Decomposer_test.cxx
-  LIBRARIES
-    ROOT::Physics
-    ROOT::GenVector
-    ROOT::Core # TVersionCheck
-  USE_BOOST_UNIT
-  )
-
-cet_test(SimpleGeo_test
-  SOURCES SimpleGeo_test.cxx
-  USE_BOOST_UNIT
-)
-
-
-cet_test(driftvolumes_test
-  SOURCES driftvolumes_test.cxx
-  DATAFILES test_geometry.fcl
-  TEST_ARGS ./test_geometry.fcl
-  LIBRARIES larcorealg_Geometry
-            messagefacility::headers
+                        messagefacility::MF_MessageLogger 
             fhiclcpp::fhiclcpp fhiclcpp::types
             cetlib cetlib_except
   USE_BOOST_UNIT
