--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ include(BasicPlugin)
 add_subdirectory(larcorealg)
 
 # tests
-add_subdirectory(test)
+#add_subdirectory(test)
 
 # ups - table and config files
 #add_subdirectory(ups)
