--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,12 @@ include(BasicPlugin)
 add_subdirectory(larcorealg)
 
 # tests
-#add_subdirectory(test)
+add_subdirectory(test)
 
 # ups - table and config files
-#add_subdirectory(ups)
+if(WANT_UPS)
+add_subdirectory(ups)
+endif()
 
 # packaging utility
 #include(UseCPack)
