Separate ChannelMapAlg from GeometryCore.
- Makes use of range-v3 instead of util::span
- Introduces sentinel types
- Introduces iteration policies
- Separates GeoObjectSorter objects from ChannelMapAlg implementations

--- a/larcorealg/CoreUtils/CMakeLists.txt
+++ b/larcorealg/CoreUtils/CMakeLists.txt
@@ -4,13 +4,8 @@ cet_make_library(SOURCE
   NumericUtils.cxx
   SortByPointers.h
   LIBRARIES PUBLIC
+  range-v3::range-v3
   cetlib_except::cetlib_except
-)
-
-cet_make_library(LIBRARY_NAME Math_Functor INTERFACE
-  SOURCE quiet_Math_Functor.h
-  LIBRARIES INTERFACE
-  ROOT::MathCore
 )
 
 cet_make_library(LIBRARY_NAME ParticleFilters INTERFACE
