attempt to recocile develop and v10_00_00rc_br

--- a/test/Geometry/CMakeLists.txt
+++ b/test/Geometry/CMakeLists.txt
@@ -145,16 +145,6 @@ cet_test(SimpleGeo_test USE_BOOST_UNIT
   SOURCE SimpleGeo_test.cxx
 )
 
-cet_test(driftvolumes_test SOURCE driftvolumes_test.cxx
-  DATAFILES test_geometry.fcl
-  TEST_ARGS ./test_geometry.fcl
-  LIBRARIES PRIVATE
-  larcorealg::Geometry
-  larcorealg::geometry_unit_test_base
-  messagefacility::MF_MessageLogger
-  TEST_PROPERTIES ENVIRONMENT FW_SEARCH_PATH=${PROJECT_BINARY_DIR}/gdml
-)
-
 cet_test(geometrydatacontainers_test USE_BOOST_UNIT
   SOURCE geometrydatacontainers_test.cxx
   LIBRARIES PRIVATE
@@ -183,6 +173,12 @@ cet_test(topology_test USE_BOOST_UNIT
   SOURCE topology_test.cxx
   LIBRARIES PRIVATE
   larcorealg::Geometry
+)
+set_property(TEST geometry_iterator_test geometry_test geometry_loader_test
+  geometry_iterator_loop_test geometry_standardchannelmapping_test
+  geometry_geoid_test geometry_thirdplaneslope_test
+  APPEND PROPERTY ENVIRONMENT
+  "FHICL_FILE_PATH=.:${PROJECT_BINARY_DIR}/job;FW_SEARCH_PATH=${PROJECT_BINARY_DIR}/gdml"
 )
 
 file(COPY ${GeometryTestLib_HEADERS}
