Restoring the full geometry dump capability.
Compared to pre-v10, full dumping is moved from `GeometryCore::Print()` to a dedicated algorithm.

--- a/larcorealg/Geometry/CMakeLists.txt
+++ b/larcorealg/Geometry/CMakeLists.txt
@@ -131,6 +131,7 @@ cet_make_library(SOURCE
   StandaloneGeometrySetup.cxx
   TPCGeo.cxx
   WireGeo.cxx
+  WireReadoutDumper.cxx
   WireReadoutGeom.cxx
   WireReadoutGeomBuilderStandard.cxx
   WireReadoutSorterStandard.cxx
